<resources>
    <string name="app_name">Virtual Window Controller</string>
    <string name="app_label">窓リモコン</string>
    <string name="btn_live">ライブ映像</string>
    <string name="btn_blank">画面オフ</string>
    <string name="btn_gizilive">擬似ライブ映像</string>
    <string name="btn_image">静止画</string>
    <string name="btn_video">動画</string>
    <string name="btn_setting">管理者用</string>
    <string name="btn_next">次画像・動画</string>
    <string name="btn_previous">前画像・動画</string>
    <string name="btn_menu">ホーム画面</string>
    <string name="btn_fullscreen">全画面表示</string>
    <string name="btn_back">ホーム画面</string>
    <string name="toast_connection_error">接続エラー</string>
    <string name="text_default_status">接続を確認してください</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_doshisha">同志社大学</string>
    <string name="text_nara">奈良県立医科大学</string>
    <string name="text_system_name">擬似窓システム</string>

    <!-- Preference Strings -->
    <string name="pref_network_title">Network</string>
    <string name="pref_ip_title">Server IP</string>
    <string name="pref_port_title">Server Port</string>
    <string name="pref_ui_title">UI</string>
    <string name="pref_thumb_count_title">Thumbnail row count</string>
    <string name="pref_theme_title">Theme</string>
</resources>
